--- a/_news/2025-11-05-nature.md
+++ b/_news/2025-11-05-nature.md
@@ -1,5 +1,7 @@
 ---
 date: 2025-11-05 12:39
+category: "nature"
+title: "Nature Articles November 2025"
 ---
 
 # [Antibody drugs show promise for treating bird flu and HIV](https://www.nature.com/articles/d41586-025-03540-4)
