优化新闻工具栏的布局和样式，调整按钮和选择框的尺寸以确保一致性

--- a/_news/2025-11-06-nature.md
+++ b/_news/2025-11-06-nature.md
@@ -4,4 +4,10 @@ date: 2025-11-06 12:00
 author: sukiElaina
 ---
 
+## [Shadow scholars: inside Kenya’s multibillion-dollar fake-essay industry](https://www.nature.com/articles/d41586-025-03399-5)
 
+
+
+文章主要揭示肯尼亚存在一个价值数十亿美元的虚假论文产业，这些“影子学者”为学术界和个人提供伪造的学术论文和学位，严重破坏了学术诚信和科研环境。研究意义在于揭示了学术造假问题的严重性，对提高学术界的诚信度和打击论文造假行为具有重要意义。
+
+---
